complete project for using mongodb cloud and prepare for docker.
